# Fingerprint-Quality

./: .gitignore  .gitmodules  README.txt  quality.sln
quality/: DirectoryWrapper.cpp  DirectoryWrapper.h  FileWrapper.cpp  FileWrapper.h  GSUtilWrapper.cpp  GSUtilWrapper.h  Image.cpp  Image.h  ImageAndQualitiesProcessor.cpp  ImageAndQualitiesProcessor.h  NameUtilities.cpp  NameUtilities.h  SecugenWrapper.cpp  SecugenWrapper.h  SystemWrapper.cpp  SystemWrapper.h  Tests.cpp  Tests.h  constants.h  finger1_500.pgm  fingerprintQualities_AfyaTek.csv  fingerprintslist.txt  main.cpp  quality.cpp  quality.vcxproj  quality.vcxproj.filters  qualityscore19.raw  qualityscore59.raw  qualityscore99.raw  sgfplib.h
quality/Debug/: vc142.idb
quality/Debug/quality.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  quality.lastbuildstate
quality/images/: 1700dpi.wsq
quality/lib/wsq/: CMakeLists.txt  Makefile  cmake_install.cmake
quality/lib/wsq/include/: an2k.h  little.h
quality/test_images/: 1700dpi_2.wsq  500dpi.wsq  500dpi_2.wsq
quality/x64/: sgfplib.exp  sgfplib.lib
quality/x64/Debug/: vc142.idb
quality/x64/Debug/quality.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  quality.lastbuildstate
x64/Debug/: quality.ilk
